--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
           <h1 class="cover-heading">We are working on our new site.</h1>
           <p class="lead">Leave us your info and let our network of professionals help you find your next dream home.</p>
           <p class="lead">
-            <a href="#" class="btn btn-lg btn-default">Learn more.</a>
+            <a href="mailto:frankli@franklihomes.com" class="btn btn-lg btn-default">Learn more</a>
           </p>
         </div>
 
